# registration

./: Cargo.toml  record_0.json  test.json
.github/: FUNDING.yml
directories/account_directory/: record_1.json  record_3.json  record_4.json  record_5.json  record_6.json  record_7.json
directories/accounts_directory/: record_0.json
directories/employees_directory/: record_0.json
directories/inventory_directory/: record_1.json  record_2.json
directories/transactions_directory/: record_1.json  record_2.json
directory/: record.json
src/: directory.rs  io.rs  main.rs  main1.rs  notmain.rs  record.rs  utils.rs
users_directory/: user_2.json  user_4.json  user_6.json  user_Dario Mazhara.json  user_Ethan Gary.json  user_Rose Bafaiz.json
