[package]
name = "registration"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dialoguer = "0.10.0"
serde_json = "1.0.59"
serde_derive = "1.0.117"
serde = "1.0.117"
json = "0.12.4"
itertools = "0.10.3"
serde_with = "1.13.0"
glob = "0.3.0"

[profile.release]
panic = 'abort'